# casino

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
blackjack/: blackjack.cpp  blackjack.h
include/: dealer.h  player.h  utils.h
lib/: dealer.cpp  player.cpp  utils.cpp
poker/: declareWinner.cpp  declareWinner.h  handEvaluator.cpp  handEvaluator.h  node.h  pokerBetting.cpp  pokerBetting.h  pokerGame.cpp  pokerGame.h  pokerOutput.cpp  pokerOutput.h
roulette/: roulette.cpp  roulette.h
slot/: slotMachine.cpp  slotMachine.h
tests/: poker_tests.cpp
